# future-demand-coding-challenge

./: .gitignore  Dockerfile  Makefile  README.md  crawl.py  create_table.py  docker-compose.yml  main.py  pyproject.toml  requirements.txt  settings.py
.github/workflows/: production.yml  staging.yml
crawlers/: blueprint.py  lucerne_festival.py
data/: events.csv
helpers/: logger.py
models/: artists.py  events.py  locations.py
src/: main.py  requirements.txt
src/crawlers/: blueprint.py  lucerne_festival.py
src/data/: events.csv  events.json
src/models/: events.py
